force-app/main/default/objects/Leave_Request__c/fields/Medical_Certificate_Required1__c.field-meta.xml
<CustomField>
    <fullName>Medical_Certificate_Required1__c</fullName>
    <formula>IF(Total_Days__c &gt;= 3, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medical Certificate Required</label>
    <type>Checkbox</type>
</CustomField>