force-app/main/default/objects/Leave_Request__c/fields/Medical_Certificate_Required__c.field-meta.xml
<CustomField>
    <fullName>Medical_Certificate_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical Certificate Required</label>
    <type>Checkbox</type>
</CustomField>