force-app/main/default/objects/Leave_Request__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal Work</fullName>
            </value>
            <value>
                <fullName>Urgent Matters</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Fever</fullName>
            </value>
            <value>
                <fullName>Cold/Cough</fullName>
            </value>
            <value>
                <fullName>Hospitalisation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>