force-app/main/default/objects/Leave_Request__c/recordTypes/Casual_Leave.recordType-meta.xml
<RecordType>
    <fullName>Casual_Leave</fullName>
    <active>true</active>
    <label>Casual Leave</label>
</RecordType>