force-app/main/default/objects/Leave_Request__c/recordTypes/Paternity_Leave.recordType-meta.xml
<RecordType>
    <fullName>Paternity_Leave</fullName>
    <active>true</active>
    <label>Paternity Leave</label>
</RecordType>