force-app/main/default/objects/Leave_Request__c/recordTypes/Work_From_Home.recordType-meta.xml
<RecordType>
    <fullName>Work_From_Home</fullName>
    <active>true</active>
    <label>Work From Home</label>
</RecordType>