force-app/main/default/objects/Leave_Request__c/validationRules/End_Date_Cannot_be_before_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Cannot_be_before_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &lt;  Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date Cannot be earlier than Start Date</errorMessage>
</ValidationRule>