force-app/main/default/objects/Leave_Request__c/validationRules/Rejection_Reason_Must_be_filled.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejection_Reason_Must_be_filled</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL( Status__c , &quot;Rejected&quot;),
  ISBLANK( Rejection_Reason__c),
  $Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorDisplayField>Rejection_Reason__c</errorDisplayField>
    <errorMessage>Rejected Reason must be filled when Status is Rejected</errorMessage>
</ValidationRule>